--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
                     <input class="button" type="button" value="Continuar como cwb_kauan">
                 </div>
                 <div class="conta-errada">
-                    <a id="linkum" href="">Não é cwb_kauan? <span class="changeAccount">Mudar de conta</span></a>
+                    <a href="#">Não é cwb_kauan? <span class="changeAccount">Mudar de conta</span></a>
                 </div>
             </div>
         </div>
-        <div class="footer1">
+        <div class="divfooter">
             <ul class="lista">
-                <li><a class="footer" href="">Sobre</a></li>
-                <li><a class="footer" href="">Blog</a></li>
-                <li><a class="footer" href="">Empregos</a></li>
-                <li><a class="footer" href="">Ajuda</a></li>
-                <li><a class="footer" href="">API</a></li>
-                <li><a class="footer" href="">Privacidade</a></li>
-                <li><a class="footer" href="">Termos</a></li>
-                <li><a class="footer" href="">Contas principais</a></li>
-                <li><a class="footer" href="">Hashtags</a></li>
-                <li><a class="footer" href="">Localização</a></li>
-                <li><a class="footer" href="">Português(Brasil)</a></li>
-                <li><a class="footer" href="">© 2021 Instagram do Facebook</a></li>
+                <li><a class="footer" href="#">Sobre</a></li>
+                <li><a class="footer" href="#">Blog</a></li>
+                <li><a class="footer" href="#">Empregos</a></li>
+                <li><a class="footer" href="#">Ajuda</a></li>
+                <li><a class="footer" href="#">API</a></li>
+                <li><a class="footer" href="#">Privacidade</a></li>
+                <li><a class="footer" href="#">Termos</a></li>
+                <li><a class="footer" href="#">Contas principais</a></li>
+                <li><a class="footer" href="#">Hashtags</a></li>
+                <li><a class="footer" href="#">Localização</a></li>
+                <li><a class="footer" href="#">Português(Brasil)</a></li>
+                <li><a class="footer" href="#">© 2021 Instagram do Facebook</a></li>
             </ul>
         </div>
         </div>
