--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <input class="button" type="button" value="Continuar como cwb_kauan">
                 </div>
                 <div class="conta-errada">
-                    <a href="#">Não é cwb_kauan? <span class="changeAccount">Mudar de conta</span></a>
+                    <a id="linkum" href="#">Não é cwb_kauan? <span class="changeAccount">Mudar de conta</span></a>
                 </div>
             </div>
         </div>
-        <div class="divfooter">
+        <div class="divlistafooter">
             <ul class="lista">
                 <li><a class="footer" href="#">Sobre</a></li>
                 <li><a class="footer" href="#">Blog</a></li>
@@ -41,7 +41,7 @@
                 <li><a class="footer" href="#">Hashtags</a></li>
                 <li><a class="footer" href="#">Localização</a></li>
                 <li><a class="footer" href="#">Português(Brasil)</a></li>
-                <li><a class="footer" href="#">© 2021 Instagram do Facebook</a></li>
+                <li><a class="footer" href="">© 2021 Instagram do Facebook</a></li>
             </ul>
         </div>
         </div>
