--- a/index.html
+++ b/index.html
@@ -28,21 +28,24 @@
                 </div>
             </div>
         </div>
-        <div class="divlistafooter">
-            <ul class="lista">
-                <li><a class="footer" href="#">Sobre</a></li>
-                <li><a class="footer" href="#">Blog</a></li>
-                <li><a class="footer" href="#">Empregos</a></li>
-                <li><a class="footer" href="#">Ajuda</a></li>
-                <li><a class="footer" href="#">API</a></li>
-                <li><a class="footer" href="#">Privacidade</a></li>
-                <li><a class="footer" href="#">Termos</a></li>
-                <li><a class="footer" href="#">Contas principais</a></li>
-                <li><a class="footer" href="#">Hashtags</a></li>
-                <li><a class="footer" href="#">Localização</a></li>
-                <li><a class="footer" href="#">Português(Brasil)</a></li>
-                <li><a class="footer" href="">© 2021 Instagram do Facebook</a></li>
-            </ul>
+        <div>
+
+            <div class="divlistafooter">
+                <ul class="lista">
+                    <li><a class="footer" href="#">Sobre</a></li>
+                    <li><a class="footer" href="#">Blog</a></li>
+                    <li><a class="footer" href="#">Empregos</a></li>
+                    <li><a class="footer" href="#">Ajuda</a></li>
+                    <li><a class="footer" href="#">API</a></li>
+                    <li><a class="footer" href="#">Privacidade</a></li>
+                    <li><a class="footer" href="#">Termos</a></li>
+                    <li><a class="footer" href="#">Contas principais</a></li>
+                    <li><a class="footer" href="#">Hashtags</a></li>
+                    <li><a class="footer" href="#">Localização</a></li>
+                    <li><a class="footer" href="#">Português(Brasil)</a></li>
+                    <li><a class="footer" href="">© 2021 Instagram do Facebook</a></li>
+                </ul>
+            </div>
         </div>
         </div>
         <script src="js/js.js"></script>
