--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="testefooter">
 
             <div class="divlistafooter">
                 <ul class="lista">
